AI readiness: consolidate human and AI docs